@@ -47,13 +47,11 @@ class ContactViewCategory extends JView
 			return false;
 		}
 
-		if($category == false)
-		{
+		if ($category == false) {
 			return JError::raiseWarning(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
 		}
 
-		if($parent == false)
-		{
+		if ($parent == false) {
 			return JError::raiseWarning(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
 		}
 
@@ -74,16 +72,23 @@ class ContactViewCategory extends JView
 			$temp->loadJSON($item->params);
 			$item->params = clone($params);
 			$item->params->merge($temp);
+
 			if ($item->params->get('show_email', 0) == 1) {
 				$item->email_to = trim($item->email_to);
+
 				if (!empty($item->email_to) && JMailHelper::isEmailAddress($item->email_to)) {
 					$item->email_to = JHtml::_('email.cloak', $item->email_to);
-				} else {
+				}
+				else {
 					$item->email_to = '';
 				}
 			}
 		}
 
+		// Setup the category parameters.
+		$cparams = $category->getParams();
+		$category->params = clone($params);
+		$category->params->merge($cparams);
 		$children = array($category->id => $children);
 
 		$this->assignRef('maxLevel',	$params->get('maxLevel', -1));
@@ -94,6 +99,11 @@ class ContactViewCategory extends JView
 		$this->assignRef('params',		$params);
 		$this->assignRef('parent',		$parent);
 		$this->assignRef('pagination',	$pagination);
+
+		// Override the layout if you want to.
+		if ($layout = $category->params->get('layout')){
+			$this->setLayout($layout);
+		}
 
 		$this->_prepareDocument();
 
@@ -113,38 +123,44 @@ class ContactViewCategory extends JView
 		// Because the application sets a default page title,
 		// we need to get it from the menu item itself
 		$menu = $menus->getActive();
-		if($menu)
-		{
+
+		if ($menu) {
 			$this->params->def('page_heading', $this->params->get('page_title', $menu->title));
-		} else {
+		}
+		else {
 			$this->params->def('page_heading', JText::_('COM_CONTACT_DEFAULT_PAGE_TITLE'));
 		}
+
 		$id = (int) @$menu->query['id'];
-		if ($menu && ($menu->query['option'] != 'com_contact' || $menu->query['view'] == 'contact' || $id != $this->category->id))
-		{
+
+		if ($menu && ($menu->query['option'] != 'com_contact' || $menu->query['view'] == 'contact' || $id != $this->category->id)) {
 			$path = array(array('title' => $this->category->title, 'link' => ''));
 			$category = $this->category->getParent();
+
 			while (($menu->query['option'] != 'com_contact' || $menu->query['view'] == 'contact' || $id != $category->id) && $category->id > 1)
 			{
 				$path[] = array('title' => $category->title, 'link' => ContactHelperRoute::getCategoryRoute($category->id));
 				$category = $category->getParent();
 			}
+
 			$path = array_reverse($path);
-			foreach($path as $item)
+
+			foreach ($path as $item)
 			{
 				$pathway->addItem($item['title'], $item['link']);
 			}
 		}
 
 		$title = $this->params->get('page_title', '');
+
 		if (empty($title)) {
 			$title = htmlspecialchars_decode($app->getCfg('sitename'));
 		}
 		elseif ($app->getCfg('sitename_pagetitles', 0)) {
 			$title = JText::sprintf('JPAGETITLE', htmlspecialchars_decode($app->getCfg('sitename')), $title);
 		}
-		$this->document->setTitle($title);
 
+		$this->document->setTitle($title);
 
 		if ($this->category->metadesc) {
 			$this->document->setDescription($this->category->metadesc);
@@ -164,7 +180,8 @@ class ContactViewCategory extends JView
 
 		$mdata = $this->category->getMetadata()->toArray();
 
-		foreach ($mdata as $k => $v) {
+		foreach ($mdata as $k => $v)
+		{
 			if ($v) {
 				$this->document->setMetadata($k, $v);
 			}
