@@ -57,8 +57,13 @@ class ContentViewCategory extends JView
 		}
 
 		if ($parent == false) {
-			//TODO Raise error for missing parent category here
+			return JError::raiseWarning(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
 		}
+
+		// Setup the category parameters.
+		$cparams = $category->getParams();
+		$category->params = clone($params);
+		$category->params->merge($cparams);
 
 		// Check whether category access level allows access.
 		$user	= JFactory::getUser();
@@ -74,7 +79,8 @@ class ContentViewCategory extends JView
 		$numLinks	= $params->def('num_links', 4);
 
 		// Compute the article slugs and prepare introtext (runs content plugins).
-		for ($i = 0, $n = count($items); $i < $n; $i++) {
+		for ($i = 0, $n = count($items); $i < $n; $i++)
+		{
 			$item = &$items[$i];
 			$item->slug = $item->alias ? ($item->id . ':' . $item->alias) : $item->id;
 
@@ -129,7 +135,8 @@ class ContentViewCategory extends JView
 			}
 
 			// The remainder are the links.
-			for ($i = $numLeading + $numIntro; $i < $max; $i++) {
+			for ($i = $numLeading + $numIntro; $i < $max; $i++)
+			{
 				$this->link_items[$i] = &$items[$i];
 			}
 		}
@@ -145,6 +152,11 @@ class ContentViewCategory extends JView
 		$this->assignRef('parent', $parent);
 		$this->assignRef('pagination', $pagination);
 		$this->assignRef('user', $user);
+
+		// Override the layout if you want to.
+		if ($layout = $category->params->get('layout')) {
+			$this->setLayout($layout);
+		}
 
 		$this->_prepareDocument();
 
@@ -164,15 +176,17 @@ class ContentViewCategory extends JView
 		// Because the application sets a default page title,
 		// we need to get it from the menu item itself
 		$menu = $menus->getActive();
+
 		if ($menu) {
 			$this->params->def('page_heading', $this->params->get('page_title', $menu->title));
-		} else {
+		}
+		else {
 			$this->params->def('page_heading', JText::_('JGLOBAL_ARTICLES'));
 		}
 
 		$id = (int) @$menu->query['id'];
-		if ($menu && ($menu->query['option'] != 'com_content' || $menu->query['view'] == 'article' || $id != $this->category->id))
-		{
+
+		if ($menu && ($menu->query['option'] != 'com_content' || $menu->query['view'] == 'article' || $id != $this->category->id)) {
 			$path = array(array('title' => $this->category->title, 'link' => ''));
 			$category = $this->category->getParent();
 
@@ -184,7 +198,8 @@ class ContentViewCategory extends JView
 
 			$path = array_reverse($path);
 
-			foreach ($path as $item) {
+			foreach ($path as $item)
+			{
 				$pathway->addItem($item['title'], $item['link']);
 			}
 		}
@@ -193,7 +208,8 @@ class ContentViewCategory extends JView
 
 		if (empty($title)) {
 			$title = htmlspecialchars_decode($app->getCfg('sitename'));
-		} elseif ($app->getCfg('sitename_pagetitles', 0)) {
+		}
+		elseif ($app->getCfg('sitename_pagetitles', 0)) {
 			$title = JText::sprintf('JPAGETITLE', htmlspecialchars_decode($app->getCfg('sitename')), $title);
 		}
 
@@ -217,7 +233,8 @@ class ContentViewCategory extends JView
 
 		$mdata = $this->category->getMetadata()->toArray();
 
-		foreach ($mdata as $k => $v) {
+		foreach ($mdata as $k => $v)
+		{
 			if ($v) {
 				$this->document->setMetadata($k, $v);
 			}
